# aseprite-gd

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
addons/aseprite_gd/: aseprite_gd.gdextension  plugin.cfg  plugin.gd
crates/ase-cli/: Cargo.toml
crates/ase-core/: Cargo.toml
crates/ase-core/examples/: render_frames.rs
crates/ase-core/fuzz/: Cargo.toml
crates/ase-core/fuzz/fuzz_targets/: parse.rs  render.rs
crates/ase-core/src/: error.rs  file.rs  lib.rs  limits.rs  read.rs
crates/ase-core/src/composite/: blend.rs  mod.rs  render.rs
crates/ase-core/src/model/: mod.rs
crates/ase-core/src/parse/: cel.rs  chunk.rs  frame.rs  header.rs  layer.rs  misc.rs  mod.rs  palette.rs  slice.rs  tags.rs  tileset.rs  user_data.rs
crates/ase-core/tests/: fuzz_regressions.rs  golden.rs  oracle.rs  parse_fixtures.rs  user_data_fixtures.rs
crates/ase-core/tests/fixtures/: README.md
crates/aseprite-gd/: Cargo.toml
crates/aseprite-gd/src/: atlas.rs  convert.rs  editor_tools.rs  hooks.rs  lib.rs  plugin.rs  runtime.rs
crates/aseprite-gd/src/import/: animation_library.rs  canvas_texture.rs  mod.rs  scene.rs  sprite_frames.rs  stylebox.rs  texture.rs  tileset.rs
docs/: architecture.md  ase-format-reference.md  aseprite-conventions.md  cookbook.md  editor-tools.md  feature-list.md  getting-started.md  post-import-hooks.md  publishing.md  runtime-api.md  tileset-workflow.md  troubleshooting.md
docs/importers/: animation-library.md  canvas-texture.md  sprite-frames.md  stylebox.md  texture.md  tileset.md
godot/: project.godot  verify_import.gd  verify_import.gd.uid
godot/examples/: README.md  animated_character.tscn  animation_player.tscn  animation_player_playground.tscn  lit_sprite.tscn  shared_sheet.gd  shared_sheet.gd.uid  shared_sheet.tscn  ui_panel.tscn
godot/hooks/: add_slice_hitboxes.gd  add_slice_hitboxes.gd.uid  sync_shared_sheet.gd  sync_shared_sheet.gd.uid  sync_tileset.gd  sync_tileset.gd.uid  tag_metadata.gd  tag_metadata.gd.uid
godot/sprites/: blend_multiply.aseprite.import  (+17 more)
(+21 files in other folders)
