[package]
name = "ase-core"
description = "Parser and compositor for Aseprite (.aseprite/.ase) files. No engine dependencies."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
miniz_oxide = "0.8"

[dev-dependencies]
png = "0.17"
# Oracle parsers for cross-check tests (tests/oracle.rs) — dev-only, never ship.
asefile = "0.3"
aseprite-loader = "0.4"
